@@ -1,4 +1,4 @@
-$Id: README,v 1.16 2007-08-08 02:25:09 cmatsuoka Exp $
+$Id: README,v 1.17 2007-08-10 13:58:24 cmatsuoka Exp $
 
 
 
@@ -45,7 +45,6 @@ The current version recognizes the following module formats:
 
   CHN	****+	Fast/Taketracker	xCHN, xxCH
   EXO	*** 	Startrekker/ADSC	FLT4/8, EXO4/8 (AM unsupported)
-  FLX	****	Flextrax		M.K., xCHN (no dsp effects)
   M15	****	Soundtracker		2.2, UST
   MOD	****+	Sound/Noise/Protracker	M.K., M!K!, M&K!, N.T., CD81
   WOW	****+	Mod's Grave		M.K.
@@ -92,6 +91,13 @@ The current version recognizes the following module formats:
   MTN	****	ST 2.6, Ice Tracker	MTN, IT10
   OKTA	***	Oktalyzer		-
   SFX	***	SoundFX			1.3, 2.0?
+
+  Other (Atari):
+
+  CDx1	****+	Octalyser		CD61, CD81
+  DTM	**	Digital Tracker		1.9
+  FLX	***	Flextrax		M.K., xCHN (no dsp effects)
+  MOD	***	TCB Tracker		'AN COOL.'
 
   Other (PC):
 
